--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body{
+    font-family: "Plus Jakarta Sans", sans-serif;
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.my-font{
+    font-family: "Unbounded", sans-serif;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.underline-after{
+    display: table;
+    margin: 0 auto; /* Centers the element */
+    position: relative;
+}
+.underline-after::after {
+    content: '';
+    position: absolute;
+    width: 50%;
+    height: 3px; 
+    bottom: -5px;
+    border-radius: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: currentColor; /* Matches text color */
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
